Intel Graphics + nvidia + kernel 5.12.5 and above screen flicker / wobble / shaking / jitter / wiggling problem
Using FC34. After update to kernel 5.12.5 a screen flicker or jitter was introduced. This jitter starts at the luks password prompt (root, home and swap are luks2 encrypted) and continues on all the way to the gnome user password prompt and also once gnome is in use. I installed kernel 5.12.7 and the problem persisted. I installed kernels 5.12.4 (fc34) 5.13.0 for f35 just to see if I would get lucky but no joy. If an external monitor is attached it works fine. lshw_dmsg.zipI also tried with Ubuntu 20.04 and upgraded to kernel 5.12.9 and the same jitter happened. I made a couple of videos about the effect in FC34 and Ubuntu 20.04 and uploaded them to youtube (https://youtu.be/xnI_zkabeCo and https://youtu.be/0u_CA6saNFc). I attach lshw, and dmesg files.
MSI GE72VR Apache Pro 17.3" screen (1920x1080) 60Hz (though system setting lets me choose 59.96 Hz or 60.01 Hz, I tried both and again, no joy). GeForce GTX 1060 with 6GB GDDR5 (the problem persists with nouveau and the proprietary drivers btw, and yes, I do sign them in UEFI) 12 GB of RAM 1 x 512 GB SSD (non nvme) 1 x 1 TB HDD[lshw_dmsg.zip